--- a/clock2.html
+++ b/clock2.html
@@ -23,9 +23,9 @@
 
   <header class="center">
     <h1>The Monastery of the White Tiger</h1>
-    <p class="subtitle">Metric Clock Interface</p>
+    <p class="subtitle">Metric Clock</p>
     <nav>
-      <a class="menu" href="/anathem/">[ back ]</a>
+      <a class="menu" href="/human.html">[ back ]</a>
     </nav>
   </header>
 
