--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   <header>
     <h1>The White Tiger Monastery</h1>
     <p><em>A quasi-secular, leftist spiritual community.</em></p>
+    <div style="text-align:center;">
+      <img src="/img/monastery.png">
+    </div>
   </header>
 
   <section>
