--- a/clock.html
+++ b/clock.html
@@ -1,89 +1,112 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <!-- 
-    TODO: 
-    -integrate the link into the js code so the person doesn't even have to copy and paste the code
-    -be able to covert a time into metric time
-    -->
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The White Tigers - Metric Clock</title>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Favicon and Apple Touch -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
-		<title>The Monastery of the White Tiger</title>
-    <link rel="stylesheet" href="/css.css">
+  <!-- Styles -->
+  <link rel="stylesheet" href="/css.css" />
 
+  <!-- TODO:
+    - Integrate link into JS so users don't need to copy/paste
+    - Enable time conversion to metric format
+  -->
+</head>
+<body>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-	</head>
-    <body>
-
-    <h1>The Monastery of the White Tiger - metric clock</h1>
-    <div class="">
-        <a  class='menu' href="/anathem/">[ back ]</a>
-    </div>
-
-    <h3 class="center">universal</h3>
-    <div class="center">
+  <header class="center">
+    <h1>The Monastery of the White Tiger</h1>
+    
+  </header>
+  <p class="subtitle">Metric Clock</p>
+    <nav>
+      <a class="menu" href="/human.html">[ back ]</a>
+    </nav>
+  <main>
+    <!-- Universal Time -->
+    <section>
+      <h3 class="center">Universal</h3>
+      <div class="center time-display">
         <span id="universalCycles"></span>-<span id="universalDays"></span>
-    </div><div class="center">
+      </div>
+      <div class="center time-display">
         <span id="universalTime"></span>
-    </div>
-    <h3 class="center">earth-based</h3>
+      </div>
+    </section>
 
-    <div class="center">
-        <input id='solarNoon' type='text' value="" onkeydown="typing(this)" />
-        <button onclick="solarNoon()">go</button>
-    </div><div class="center">
-        <a href="https://gml.noaa.gov/grad/solcalc/" target="_blank">solar noon calculator</a>
-    </div>
-    <div class="center">
+    <!-- Earth-Based Time -->
+    <section>
+      <h3 class="center">Earth-Based</h3>
+      <div class="center">
+        <input id="solarNoon" type="text" placeholder="Solar noon (hh:mm)" onkeydown="typing(this)" />
+        <button onclick="solarNoon()">Set</button>
+      </div>
+      <div class="center">
+        <a href="https://gml.noaa.gov/grad/solcalc/" target="_blank">Solar Noon Calculator</a>
+      </div>
+      <div class="center time-display">
         <span id="earthTime"></span>
-        <span class='category'>
-            (<span id="reset"></span>)
-        </span>
-    </div>
-    <h3 class="center">alarms (universal time)</h3>
-    <div class="center">
-        <input type="text" id="alarmValue">
+        <span class="category">(<span id="reset"></span>)</span>
+      </div>
+    </section>
+
+    <!-- Alarms -->
+    <section>
+      <h3 class="center">Alarms (Universal Time)</h3>
+      <div class="center">
+        <input type="text" id="alarmValue" placeholder="Set alarm (k sec)" />
         <button id="createAlarm">+k</button>
-    </div><div id='alarms' class="center">
-        
-    </div>
-    <h3 class="center">conversions</h3>
-    <div class="center">
-        <input type="text" id="convertValue">
-        <button id="toMetric"> minutes -> metric seconds</button>
-        <button id="toImperial"> k metric seconds -> minutes</button>
-        <button id="whatDateDaysAgo">what date was is it this many days ago?</button>
-    </div><div id="convertResult" class="center">
-    </div>
-    <h3 class="center">timers</h3>
-    <div class="center">
-        <input type="text" id="newTimer" value="">
-        <button id="minuteTimer">+minutes</button>
-        <button id="metricTimer">+k metric seconds </button>
-    </div><div id="timers">
+      </div>
+      <div id="alarms" class="center"></div>
+    </section>
 
-    </div>
+    <!-- Conversions -->
+    <section>
+      <h3 class="center">Conversions</h3>
+      <div class="center">
+        <input type="text" id="convertValue" placeholder="Enter value" />
+        <button id="toMetric">Minutes → Metric Seconds</button>
+        <button id="toImperial">k Metric Seconds → Minutes</button>
+        <button id="whatDateDaysAgo">What date was X days ago?</button>
+      </div>
+      <div id="convertResult" class="center"></div>
+    </section>
+
+    <!-- Timers -->
+    <section>
+      <h3 class="center">Timers</h3>
+      <div class="center">
+        <input type="text" id="newTimer" placeholder="Enter time" />
+        <button id="minuteTimer">+Minutes</button>
+        <button id="metricTimer">+k Metric Seconds</button>
+      </div>
+      <div id="timers" class="center"></div>
+    </section>
+
+    <!-- Future Feature Placeholder -->
     <!--
-    <div>
-        What year would you like to translate? 
-        <input type="text">
-        <button>universal -> conventional</button>
-    </div>
+    <section>
+      <p>What year would you like to translate?</p>
+      <input type="text" />
+      <button>Universal → Conventional</button>
+    </section>
     -->
-    <script>
+  </main>
 
-    </script>
-    <script src='https://code.jquery.com/jquery-3.6.1.js'></script>
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
+  <script src="/js/clock.js"></script>
+  <script src="/js/js.js"></script>
+  <script>
+    runClock();
+  </script>
 
-    <script src="/js/clock.js"></script>
-    <script src='/js/js.js'></script>
-    <script>
-        runClock();
-    </script>
-</body></html>
+</body>
+</html>
