--- a/human.html
+++ b/human.html
@@ -15,12 +15,13 @@
     </div>
    
     <h3 id='' class="center"></h3>
-    I've been generating a lot of stuff for the monastery with Chat GPT. Most of it's just helping me flesh out ideas. Like, it was Chat GPT that characterized this as a religion for post-capitalism survivors. That was a really insightful thing and I appreciate it.
-
-    But The Centrality of Humanity and just the backlash in general against AI kind of implies that I owe an obligation to you, the reader, to at least have a few things that are entirely written by me. 
-
-    One document that, just by the nature of it, will always be human written is <a href="/log.html">my White Tiger journal</a> where I talk about some of the challenges and successes I experience during this process. 
-
+    <p>
+      I've been generating a lot of stuff for the monastery with Chat GPT. Most of it's just helping me flesh out ideas. Like, it was Chat GPT that characterized this as a religion for post-capitalism survivors. That was a really insightful thing and I appreciate it.
+    </p><p>
+      But The Centrality of Humanity and just the backlash in general against AI means I owe an obligation to have a few things that are entirely written by me. 
+    </p><p>
+      One document that, just by the nature of it, will always be human written is <a href="/log.html">my White Tiger journal</a> where I talk about some of the challenges and successes I experience during this process. 
+    </p>
     <script src='https://code.jquery.com/jquery-3.6.1.js'></script>
     <script src='/js/js.js'></script>
 
