--- a/log.html
+++ b/log.html
@@ -16,7 +16,7 @@
 	<body>
     <h1>The Monastery of the White Tiger - Journal of The Displine</h1>
     <div class="">
-        <a class='menu'  href="/anathem/">[ back ]</a>    
+        <a class='menu'  href="/human.html">[ back ]</a>    
     </div>
     <div><span class="category">: </span></div>
     <h3>4391-934</h3>
