--- a/tech/old.html
+++ b/tech/old.html
@@ -16,7 +16,7 @@
 	<body>
     <h1>The Monastery of the White Tiger - tech tree</h1>
     <div class="">
-      <a class='menu'  href="/anathem/">[ back ]</a>
+      <a class='menu'  href="/human.html">[ back ]</a>
   </div>
     <h3 class="achieved">
         Paper
