--- a/tech/tech-4391-667.html
+++ b/tech/tech-4391-667.html
@@ -16,7 +16,7 @@
 	<body>
     <h1>The Monastery of the White Tiger - tech tree</h1>
     <div class="">
-      <a class='menu'  href="/anathem/">[ back ]</a>
+      <a class='menu'  href="/human.html">[ back ]</a>
    </div><div>
       Time Period: 4931-6xx (updated: 4391-667)
     </div>
