--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
   <header>
     <div style="text-align:center;">
-      <img src="/img/monastery.png" style="width: 50%; height: auto;">
+      <a href="/human.html"><img src="/img/monastery.png" style="width: 50%; height: auto;"></a>
     </div>
     <div style="text-align:center;">
     <a href="https://www.instagram.com/leblabitirxu/"><img src="/img/instagram.png" width="24px" height="24px"></a>
